Adicionar mensagem mutavel

--- a/app/templates/victor2.html
+++ b/app/templates/victor2.html
@@ -5,13 +5,9 @@
     <title>Index Example</title>
 </head>
 </head>
-from random import randint
-
-mensagens = ["Mensagem 1", "Mensagem 2,"Mensagem 3", "Mensagem 4", "Mensagem 5"]
-iter = randint(0,5)
-print(mensagens[iter])
 
 <body>
+    {{ mensagem }}
 
 </body>
 </html>
