--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="/cad_user" method="POST">
+    <form action="/cad_user_victor2" method="POST">
         <ul style="list-style-type: none;">
             <li>
                 Nome <input type="text" name="nome"/>
